trying to fix corss error