@@ -1,32 +1,33 @@
-// package com.glowservices.glow_services_backend.config;
+package com.glowservices.glow_services_backend.config;
 
-// import java.util.Arrays;
-// import java.util.List;
+import java.util.Arrays;
+import java.util.List;
 
-// import org.springframework.context.annotation.Bean;
-// import org.springframework.context.annotation.Configuration;
-// import org.springframework.web.cors.CorsConfiguration;
-// import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-// import org.springframework.web.filter.CorsFilter;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
-// @Configuration
-// public class CorsConfig {
+@Configuration
+public class CorsConfig {
     
-//     @Bean
-//     public CorsFilter corsFilter() {
-//         CorsConfiguration corsConfiguration = new CorsConfiguration();
-//         corsConfiguration.setAllowCredentials(true);
-//         corsConfiguration.setAllowedOriginPatterns(Arrays.asList("http://localhost:5173", "https://glow-services-frontend-15jfz525u-rajutechassists-projects.vercel.app"));
-//         // corsConfiguration.setAllowedHeaders(Arrays.asList("*"));
-//         corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//         corsConfiguration.setExposedHeaders(List.of("Authorization", "Location"));
-//         corsConfiguration.setAllowCredentials(true); // only if you plan to use cookies/credentials
+    @Bean
+    public CorsFilter corsFilter() {
+        CorsConfiguration corsConfiguration = new CorsConfiguration();
+        corsConfiguration.setAllowCredentials(true);
+        corsConfiguration.setAllowedOriginPatterns(Arrays.asList("http://localhost:5173", "https://glow-services-frontend-15jfz525u-rajutechassists-projects.vercel.app", "https://glow-service.studio",
+            "https://www.glow-service.studio"));
+        // corsConfiguration.setAllowedHeaders(Arrays.asList("*"));
+        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        corsConfiguration.setExposedHeaders(List.of("Authorization", "Location"));
+        corsConfiguration.setAllowCredentials(true); // only if you plan to use cookies/credentials
 
-//         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//         source.registerCorsConfiguration("/**", corsConfiguration);
-//         return new CorsFilter(source);
-//     }
-// }
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", corsConfiguration);
+        return new CorsFilter(source);
+    }
+}
 
 
 // package com.glowservices.glow_services_backend.config;
@@ -75,65 +76,3 @@
 //         return source;
 //     }
 // }
-
-
-package com.glowservices.glow_services_backend.config;
-
-import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.Arrays;
-
-@Configuration
-public class CorsConfig {
-
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        
-        // ✅ SET ALLOWED ORIGINS - INCLUDE ALL YOUR FRONTEND URLS
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:5173",
-            "http://localhost:3000",
-            "https://glow-service.studio",
-            "https://www.glow-service.studio",
-            "https://glow-services-frontend-git-main-rajutechassists-projects.vercel.app/"  // ✅ CRITICAL: Add your Vercel frontend
-        ));
-        
-        // ✅ SET ALLOWED METHODS
-        configuration.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
-        ));
-        
-        // ✅ SET ALLOWED HEADERS
-        configuration.setAllowedHeaders(Arrays.asList(
-            "Content-Type", 
-            "Authorization", 
-            "X-Requested-With", 
-            "Accept",
-            "Origin",
-            "Access-Control-Request-Method",
-            "Access-Control-Request-Headers"
-        ));
-        
-        // ✅ EXPOSE HEADERS FOR FRONTEND
-        configuration.setExposedHeaders(Arrays.asList(
-            "Authorization", 
-            "Location",
-            "Content-Disposition"
-        ));
-        
-        // ✅ ALLOW CREDENTIALS
-        configuration.setAllowCredentials(true);
-        
-        // ✅ MAX AGE FOR PREFLIGHT CACHE
-        configuration.setMaxAge(3600L);
-        
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        
-        return source;
-    }
-}
